# sentiment_api

./: .gitignore  Cargo.toml  README.md
scripts/: build.sh  deploy.sh
src/: database.rs  main.rs
