[package]
name = "sentiment_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
serde = "1.0.171"
serde_json = "1.0.100"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "mysql", "chrono"]}
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

